Fixed vertical scrollbars inside of projects

--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -132,23 +132,27 @@ html, body {
   /*overflow: auto;*/
 }
 
+.ui-layout-center {
+  overflow: hidden !important;
+}
+
 #code-editor {
   height: 100%;
 }
 
 #code-editor #editor {
-	height: 100%;
+	/* height: 100%; */
 	font-size: 14px;
 }
 
 #editorContainer {
   padding: 0;
-  height: 100%;
+  height: calc(100% - 56px);
 }
 
 #editorContainer .row {
   margin: 0;
-  height: 60%;
+  height: 100%;
 }
 
 /* styling for tab input */
@@ -175,6 +179,10 @@ html, body {
 
 #fileTabs .close:hover {
 	color: red !important;
+}
+
+#fileTabs {
+  flex-shrink: 0;
 }
 
 .fileName, .hiddenSpan {
@@ -265,7 +273,7 @@ editorContainer .row {
 }
 
 #previewContainer {
-	padding-left: 0;
+	padding: 0;
 	border: 1px solid rgb(210, 208, 208);
 }
 
